--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
         <p>I create websites that are:</p>
         <div class="row">
           <div class=" col-lg-4">
-            <img class="about-img" src="images/responsive.png" alt="Responsive-website">
+            <img class="about-img" src="responsive.png" alt="Responsive-website">
             <h3>Responsive</h3>
             <p>The layouts respond to the size device being used.</p>
           </div>
           <div class=" col-lg-4">
-            <img class="about-img" src="images/drone.png" alt="dynamic-website">
+            <img class="about-img" src="drone.png" alt="dynamic-website">
             <h3>Dynamic</h3>
             <p>The page elements move about come to life.</p>
           </div>
           <div class=" col-lg-4">
-            <img class="about-img" src="images/ux.png" alt="user-friendly-website">
+            <img class="about-img" src="ux.png" alt="user-friendly-website">
             <h3>User-Friendly</h3>
             <p>Intuitive designs that make the websites easy to use.</p>
           </div>
